# cpp

./: .gitignore
images/: readme.md
images/basics/: Makefile  main.cpp  resize.cpp
images/basics/sample/: CMakeLists.txt
images/basics/show_pics/: .nvimlog  CMakeLists.txt  main.cpp  sample.cpp
images/binarization/: readme.md
images/features_detection/: CMakeLists.txt  README.md  main.cpp
images/filters/: main.cpp  readme.md
images/filters/kalman/: main.cpp  main.py
images/filters/smoothing/: CMakeLists.txt
images/harris_corner_detection/: CMakeLists.txt  main.cpp  readme.md
images/keypoint/: Makefile  keypoint.cpp
images/optical_flow/: CMakeLists.txt  lucas_kanade.cpp
images/sift/: CMakeLists.txt  main.cpp  readme.md
libraries/open3d/: README.md
libraries/opengl/: main.cpp  main.cu
libraries/opengl/linux/: 3D_cube.c  3D_prog.c  4lookat.c  ButtonClick.c  DrawColorfulLine.c  DrawLine.c  DrawRectangleFill.c  OpenFillColor.c  OpenWindow.c  RenderCube.c  SelfAvoidingWalk.c  animation.c  doublebuffering.c  readme.md  squareLattice_GLUT.cpp  square_shader.c
libraries/opengl/linux/BouncingBalls/: main.cpp
libraries/opengl/linux/CheckeredTriangles/: main.cpp
libraries/opengl/linux/ColorCubeFlyby/: main.cpp
libraries/opengl/linux/CometRide/: main.cpp
libraries/opengl/mac/: Makefile  custom_teapot.cpp  main.cpp  readme.md  teapot.cpp
libraries/opengl/windows/: SampleGL.cpp
libraries/openmp/: Makefile  for_parallel.cpp  hello_world.cpp  section_example.cpp
pocket/: CMakeLists.txt  cpp.snippets  tips.cpp
(+54 files in other folders)
