#
# FileName:     CMakeLists
# Author:       8ucchiman
# CreatedDate:  2023-12-17 14:31:02
# LastModified: 2023-12-17 14:31:39
# Reference:    https://qiita.com/shohirose/items/45fb49c6b429e8b204ac
#               https://cmake.org/cmake/help/git-master/prop_gbl/CMAKE_CXX_KNOWN_FEATURES.html#prop_gbl:CMAKE_CXX_KNOWN_FEATURES
# Description:  ---
#


project(tips)
add_executable(tips tips.cpp)
